Version 2.06.20100923 - Bug Fix Release - 09/23/10

    * Bug: Logo and Icon transparency restored
    * Bug: Multisearch now properly displayed when expanded

Version 2.05.20100726 - Bug Fix Release - 07/26/10

    * Feature: Set the number of images to search for
    * Bug: Image search works again
    * Improved: Image search uses JSON API
    * Improved: Configuration redesigned
    * Improved: Media Style redone for newer layout
    * License now properly included in script in config area

Version 2.04.20100702 - Style Release - 07/02/10

    * Feature: Toggle Video and Image embed controls
    * Bug: No longer attempts to make logo transparent after first time
    * Bug: Failure in moving "Did you mean" will no longer cause script to stop
    * Bug: Empty YouTube results no longer throws error
    * Improved: More options in Classic Style customization
    * Improved: More options in Dock Style customization
    * Improved: Dock Style redone for newer layout
    * Improved: Center Style video results cleaned up
    * Improved: New Icons
    * Improved: Checking for update uses meta.js file now

Version 2.03.20100623 - Feature Release - 06/23/10

    * Feature: Able to choose YouTube to search for videos
    * Feature: Able to add and remove search engines from Multisearch
    * Improved: Logic for exclusion rules
    * Improved: Multisearch now fits new Google style

Version 2.02.20100609 - Bug Fix Release - 06/09/10

    * Feature: Ability to move top content
    * Feature: One option to Classic Style options (Re-add Ads)
    * Feature: One option to Center Style options (Background Color)
    * Bug: No longer trigger on video search
    * Bug: Canvas issue in FF 3.5.9 now has workaround
    * Bug: No longer an error in Error Console if no images were found
    * Improved: Logic for exclusion rules

Version 2.01.20100604 - Bug Fix Release - 06/04/10

    * BUG: Dynamic page is now handled properly
    * BUG: Media style is no longer scrunched