@@ -2,6 +2,8 @@ Version 2.06.20100923 - Bug Fix Release - 09/23/10
 
     * Bug: Logo and Icon transparency restored
     * Bug: Multisearch now properly displayed when expanded
+    * Bug: Google Video Search is now working again
+    * Bug: Clicking on an image now properly opens a new window when option is set to open in new window
 
 Version 2.05.20100726 - Bug Fix Release - 07/26/10
 
